[package]
name = "xiaolongbaoproxy-rs"
version = "0.1.0"
authors = ["lyyyuna <lyyyuna@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
clap = "2"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
